typo (DRCNN -> DRCN)

--- a/src/frontend_ui/ui/ProgramSetting.ui
+++ b/src/frontend_ui/ui/ProgramSetting.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>409</width>
-    <height>1025</height>
+    <height>997</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -341,7 +341,7 @@
     <item row="18" column="2">
      <widget class="QCheckBox" name="DRCNN">
       <property name="text">
-       <string>  DRCNN</string>
+       <string>  DRCN</string>
       </property>
      </widget>
     </item>
@@ -642,7 +642,7 @@
   <widget class="QLabel" name="title_ModelSetting_4">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>280</y>
      <width>481</width>
      <height>31</height>
@@ -655,7 +655,7 @@
   <widget class="QLabel" name="title_ModelSetting_5">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>300</y>
      <width>481</width>
      <height>31</height>
@@ -668,7 +668,7 @@
   <widget class="QLabel" name="title_ModelSetting_6">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>320</y>
      <width>481</width>
      <height>31</height>
